# learning-app

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
agents/: README.md
apps/api/: .env.example  README.md  backup_schema.sh  pyproject.toml  pyrightconfig.json
apps/api/app/: cli.py  config.py  database.py  main.py  schemas.py
apps/api/app/services/: llm.py  (+1 more)
apps/api/schema/: 001_init.sql  002_question_tags.sql  README.md
apps/mobile/: App.tsx  README.md  app.json  metro.config.js  package.json
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
backend/: .env.example  learning_api_schema.sql  pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/routers/: learn.py  math.py  questions.py  settings.py
backend/app/services/: llm.py  math_problems.py  spaced_repetition.py
backend/migrations/: 20260216_add_question_tags.sql
documentation/: product.md  technical.md
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  question-form.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  questions.tsx  settings.tsx
mobile/lib/: api.ts  storage.ts
scripts/: setup_env  start_all  start_backend  start_frontend  status_all  stop_all
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Calculator.tsx
web/src/lib/: api.ts
web/src/pages/: Learn.tsx  QuestionForm.tsx  Questions.tsx
(+25 files in other folders)
